# terraprynt

./: pyproject.toml
terraprynt/: full_file.tf  main.py
terraprynt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
terraprynt/demo/: gateways.tf  locals.tf  network.tf  security.tf  servers.tf  subnets.tf  subnets_orig.tf
tests/: test_terraprynt.py
