[tool.poetry]
name = "terraprynt"
version = "0.1.0"
description = ""
authors = ["potzenhotz <lukasmuessle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
svgwrite = "^1.4"
pprint = "^0.1"
pandas = "^1.1.0"
tabulate = "^0.8.7"
python-hcl2 = "^0.3.0"
pyhcl = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
